updated some crucial changes

--- a/checkout.html
+++ b/checkout.html
@@ -33,7 +33,7 @@
     <div class="checkout-header">
       <div class="header-content">
         <div class="checkout-header-left-section">
-          <a href="front.html">
+          <a href="index.html">
             <!-- <img class="amazon-logo" src="images/amazon-logo.png">
             <img class="amazon-mobile-logo" src="images/amazon-mobile-logo.png"> -->
             365FOREVER
